--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -2,7 +2,7 @@
   max-width: 100%;
   text-align: center;
   color: $color-white;
-  min-height: 100vh;
+  height: 100%;
   background: url('../images/house-splash.jpg') no-repeat center fixed;
   background-size: cover;
 }
